Hiding touch handles during stylus button selection

While doing stylus button text selection, focus is mainly
on the stylus button press and text selection is anchored
by the stylus button. In that case touch handle has less
significance (same with touch long press drag selection).
So we can hide touch handles during stylus button selection
and can show after stylus button selection is concluded.

Bug: 771667
Change-Id: I9dccaabfd5fafccb68c1f0bce23bba36cea9061f
Reviewed-on: https://chromium-review.googlesource.com/685054
Reviewed-by: Bo <boliu@chromium.org>
Commit-Queue: AJITH KUMAR V <ajith.v@samsung.com>
Cr-Commit-Position: refs/heads/master@{#545846}
Former-commit-id: 95207d52380ad0d71121c15a7bee7c77d58e4020